--- a/tab.html
+++ b/tab.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="favicon.svg">
         <link rel="stylesheet" href="tab.css" />
         <script src="config.js"></script>
@@ -9,10 +10,14 @@
     </head>
     <body>
         <div id="background-image"></div>
-        <div id="blue-archive-data">
-            <div id="blue-archive-nickname"></div>
-            <div id="blue-archive-level"></div>
-            <div id="blue-archive-threads"></div>
+        <div id="genshin-impact-data" style="opacity: 1;">
+            <div id="genshin-impact-nickname"></div>
+            <div id="genshin-impact-uid"></div>
+            
+            <div id="genshin-impact-threads">
+            </div>
         </div>
     </body>
+</html>
+</body>
 </html>
